# Assignment_4_Mingyang-Yin

./: Dockerfile  README.md  create_dummy_models.py  docker-compose.yml  generate_samples.py  pyproject.toml  quick_test.py  requirements.txt  test_api.py  validate_models.py
app/: main.py  train.py
app/helper_lib/: __init__.py  generator.py  model1.py  trainer.py
models/: ebm_model.pth  gan_discriminator.pth
